first try by flask

--- a/BookData/ReadingData.ipynb
+++ b/BookData/ReadingData.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e7d606ba",
    "metadata": {},
    "outputs": [
@@ -188,18 +188,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write tyepe of you are searching for book: ISBN --> i / Title -->t : t\n",
-      "Enter Title of the book: me before you\n",
-      "Title: Mielőtt megismertelek\n",
-      "Language: hu\n",
+      "Write tyepe of you are searching for book: ISBN --> i / Title -->t : i\n",
+      "Enter 10 digit ISBN: 9780143130154\n",
+      "<http.client.HTTPResponse object at 0x00000153D58B2100>\n",
+      "{'kind': 'books#volumes', 'totalItems': 1, 'items': [{'kind': 'books#volume', 'id': '5lXhCwAAQBAJ', 'etag': 'fHBlyQCjmXk', 'selfLink': 'https://www.googleapis.com/books/v1/volumes/5lXhCwAAQBAJ', 'volumeInfo': {'title': 'Me Before You', 'authors': ['Jojo Moyes'], 'publisher': 'Penguin Random House', 'publishedDate': '2016', 'description': \"Taking a job as an assistant to extreme sports enthusiast Will, who is wheelchair bound after a motorcycle accident, Louisa struggles with her employer's acerbic moods and learns of his shocking plans before demonstrating to him that life is still worth living.\", 'industryIdentifiers': [{'type': 'ISBN_13', 'identifier': '9780143130154'}, {'type': 'ISBN_10', 'identifier': '0143130153'}], 'readingModes': {'text': False, 'image': False}, 'pageCount': 369, 'printType': 'BOOK', 'categories': ['FICTION'], 'averageRating': 4, 'ratingsCount': 1672, 'maturityRating': 'NOT_MATURE', 'allowAnonLogging': False, 'contentVersion': 'preview-1.0.0', 'panelizationSummary': {'containsEpubBubbles': False, 'containsImageBubbles': False}, 'imageLinks': {'smallThumbnail': 'http://books.google.com/books/content?id=5lXhCwAAQBAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api', 'thumbnail': 'http://books.google.com/books/content?id=5lXhCwAAQBAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api'}, 'language': 'en', 'previewLink': 'http://books.google.hu/books?id=5lXhCwAAQBAJ&dq=isbn:9780143130154&hl=&cd=1&source=gbs_api', 'infoLink': 'http://books.google.hu/books?id=5lXhCwAAQBAJ&dq=isbn:9780143130154&hl=&source=gbs_api', 'canonicalVolumeLink': 'https://books.google.com/books/about/Me_Before_You.html?hl=&id=5lXhCwAAQBAJ'}, 'saleInfo': {'country': 'HU', 'saleability': 'NOT_FOR_SALE', 'isEbook': False}, 'accessInfo': {'country': 'HU', 'viewability': 'NO_PAGES', 'embeddable': False, 'publicDomain': False, 'textToSpeechPermission': 'ALLOWED', 'epub': {'isAvailable': False}, 'pdf': {'isAvailable': False}, 'webReaderLink': 'http://play.google.com/books/reader?id=5lXhCwAAQBAJ&hl=&printsec=frontcover&source=gbs_api', 'accessViewStatus': 'NONE', 'quoteSharingAllowed': False}, 'searchInfo': {'textSnippet': 'Taking a job as an assistant to extreme sports enthusiast Will, who is wheelchair bound after a motorcycle accident, Louisa struggles with her employer&#39;s acerbic moods and learns of his shocking plans before demonstrating to him that life ...'}}]}\n",
+      "Title: Me Before You\n",
+      "Language: en\n",
       "Author: Jojo Moyes\n",
-      "Publisher: Alexandra Kiadó\n",
-      "ISBN_13: 9789632663869\n",
-      "ISBN_10: 9632663861\n",
-      "Page Count: 488\n",
-      "Publication Date: 2016-08-09\n",
-      "PreviewLink: http://books.google.hu/books?id=AmHTDwAAQBAJ&pg=PP1&dq=title:mebeforeyou&hl=&cd=1&source=gbs_api\n",
-      "Description: Louisa Clark elégedett az életével. Szereti a csendes kisvárost, ahol születése óta él, a munkáját a kávézóban. Szereti a családját, a zsúfolt házat, ahol apjával, anyjával, az egyik nagyapjával, a család eszének tartott nővérével és annak ötéves kisfiával együtt lakik. És talán még Patricket is szereti, a barátját, akivel már hét éve vannak együtt. Ám egy napon Lou szépen berendezett világában minden a feje tetejére áll: a kávézó váratlanul bezár, és hogy továbbra is támogatni tudja a családját, Lou elvállalja egy férfi gondozását, aki súlyos balesete után mogorván tölti a napjait. Will Traynor gyűlöli az életét. Hogy is ne gyűlölné, amikor egyetlen nap alatt mindent elveszített? A menő állása Londonban, az álomszép barátnője, a barátai, az egzotikus nyaralások - mindez már a múlté. A jelen pedig nem is lehetne rosszabb: nem elég, hogy önállóságától és méltóságától megfosztva vissza kellett térnie a szülővárosába, most még egy új gondozót is felvettek mellé, anélkül, hogy kikérték volna a véleményét. A lány elviselhetetlenül cserfes, idegesítően optimista és borzalmasan felszínesnek tűnik. Lou-nál és Willnél különbözőbb két embert keresve sem találhatnánk. Vajon képesek lesznek-e elviselni egymást, és - pusztán a másik kedvéért - újraértékelni mindazt, amit eddig gondoltak a világról?\n"
+      "Publisher: Penguin Random House\n",
+      "ISBN_13: 9780143130154\n",
+      "ISBN_10: 0143130153\n",
+      "Page Count: 369\n",
+      "Publication Date: 2016\n",
+      "PreviewLink: http://books.google.hu/books?id=5lXhCwAAQBAJ&dq=isbn:9780143130154&hl=&cd=1&source=gbs_api\n",
+      "Description: Taking a job as an assistant to extreme sports enthusiast Will, who is wheelchair bound after a motorcycle accident, Louisa struggles with her employer's acerbic moods and learns of his shocking plans before demonstrating to him that life is still worth living.\n"
      ]
     }
    ],
